--- a/Project.toml
+++ b/Project.toml
@@ -4,5 +4,6 @@ authors = ["KwatMDPhD <kwat.me@icloud.com>"]
 version = "2022.10.12-refactoring"
 
 [deps]
+BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 OnePiece = "1fe83854-81c0-42f7-afc9-71ba9af673ca"
