--- a/Project.toml
+++ b/Project.toml
@@ -5,4 +5,4 @@ version = "2022.10.12-refactoring"
 
 [deps]
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
-OnePiece = "1fe83854-81c0-42f7-afc9-71ba9af673ca"
+PProf = "e4faabce-9ead-11e9-39d9-4379958e3056"
