--- a/Project.toml
+++ b/Project.toml
@@ -6,3 +6,4 @@ version = "2022.10.12-refactoring"
 [deps]
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 PProf = "e4faabce-9ead-11e9-39d9-4379958e3056"
+Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
