--- a/Project.toml
+++ b/Project.toml
@@ -1,9 +1,7 @@
 name = "Play"
 uuid = "940c7355-9ede-4078-a8bf-c5f4ae1b8643"
 authors = ["KwatMDPhD <kwat.me@icloud.com>"]
-version = "2022.10.12-refactoring"
+version = "0.1.0"
 
 [deps]
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
-PProf = "e4faabce-9ead-11e9-39d9-4379958e3056"
-Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
