--- a/Project.toml
+++ b/Project.toml
@@ -4,4 +4,5 @@ authors = ["KwatMDPhD <kwat.me@icloud.com>"]
 version = "0.1.0"
 
 [deps]
+BioLab = "1fe83854-81c0-42f7-afc9-71ba9af673ca"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
